added Roboto font + created components directory + added styles

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,6 +1,5 @@
 
-
-.modal-styles {
+.modal {
   display: flex;
   position: fixed;
   top: 0;
@@ -12,10 +11,22 @@
   align-items: center;
 }
 
-.modal-content-styles {
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
   background-color: white;
   border-radius: 8px;
   text-align: center;
-  padding: 4px;
+  padding: 12px 8px;
+}
+
+.modal-title {
+  font-family: Roboto;
+  padding: 8px;
+}
+
+.modal-text {
+  font-family: Roboto;
 }
 
