updated README + styling

--- a/src/components/ClosingButton/ClosingButton.css
+++ b/src/components/ClosingButton/ClosingButton.css
@@ -2,12 +2,12 @@
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
-  background-color: #007bff;
+  background-color: #3634a3;
   color: white;
   border: none;
   border-radius: 5px;
 }
 
 .closing-button:hover {
-  background-color: #0056b3;
+  background-color: #252378;
 }
